--- a/src/main/resources/.env
+++ b/src/main/resources/.env
@@ -1,3 +1,3 @@
-SUrl=jdbc:MySQL://localhost:3306/apartment
+SUrl=jdbc:MySQL://localhost:3306/apartmentmapp
 SUser=root
-SPass=Gnaoh0403ss!@
+SPass=Canh2005SQL@@
