--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:MySQL://localhost:3306/apartmentmapp
+spring.datasource.url=jdbc:MySQL://localhost:3306/apartment
 spring.datasource.username=root
-spring.datasource.password=Canh2005SQL@@
+spring.datasource.password=Gnaoh0403ss!@
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
