--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jjdbc:MySQL://localhost:3306/apartment
+spring.datasource.url=jdbc:mysql://localhost:3306/apartment
 spring.datasource.username=root
 spring.datasource.password=Gnaoh0403ss!@
 
