--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/apartment
 spring.datasource.username=root
-spring.datasource.password=Gnaoh0403ss!@
+spring.datasource.password=Appu28105!
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
