--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- Send Email -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
         <!-- Spring Security -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
