--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/apartment
 spring.datasource.username=root
-spring.datasource.password=Gnaoh0403ss!@
+spring.datasource.password=Appu28105!
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -8,7 +8,7 @@ spring.jpa.show-sql=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=hoang.nv435@gmail.com
-spring.mail.password=adfasdfasdfwerwerwer
+spring.mail.username=atuan.nh2810@gmail.com
+spring.mail.password=vsyk svcr qaci sikb
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
