--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.datasource.url=jdbc:MySQL://localhost:3306/apartmentmapp
-spring.datasource.username=root
-spring.datasource.password=Canh2005SQL@@
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.datasource.url=jdbc:MySQL://localhost:3306/apartmentmapp
+#spring.datasource.username=root
+#spring.datasource.password=Canh2005SQL@@
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+
 
 server.port=8080
 
